# fmby

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
entity/src/: prelude.rs
fmby_commands/: Cargo.toml
fmby_commands/src/: fmby.rs  fun.rs  lib.rs  meta.rs  rss.rs  sql.rs  system.rs
fmby_core/: Cargo.toml
fmby_core/src/: background_task.rs  constants.rs  database.rs  drama.rs  error.rs  lib.rs  macros.rs  structs.rs
fmby_core/src/config/: mod.rs
fmby_core/src/config/bot_messages/: add_links.rs  link_testing.rs  mod.rs
fmby_core/src/rss/: fetcher.rs  manager.rs  mod.rs  rss_fetcher.rs  rss_manager.rs  rss_scheduler.rs  scheduler.rs
fmby_core/src/tasks/: mod.rs  stale_remover.rs
fmby_core/src/utils/: db.rs  formatters.rs  message.rs  mod.rs  url.rs  wiki.rs
fmby_entities/: Cargo.toml
fmby_entities/src/: lib.rs  prelude.rs  rss_feed_entries.rs  rss_feeds.rs  sea_orm_active_enums.rs  wiki_urls.rs
fmby_events/: Cargo.toml
fmby_events/src/: bookmark.rs  lib.rs
fmby_events/src/channels/: add_links.rs  global.rs  link_testing.rs  mod.rs
fmby_migrations/: Cargo.toml
fmby_migrations/src/: enums.rs  lib.rs  m20220101_000001_create_table.rs  main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
resources/: drama.json
src/: constants.rs  error.rs  macros.rs  main.rs  shared.rs
src/config/: link_testing.rs  mod.rs
src/events/channels/: add_links.rs  link_testing.rs  mod.rs
src/handlers/: bookmark.rs  mod.rs
src/handlers/channels/: add_links.rs  link_testing.rs  mod.rs
src/utils/: db.rs  formatters.rs  url.rs
