[package]
name = "fmby"
version = "0.1.0"
edition = "2024"
authors = ["Exefer"]
repository = "https://github.com/exefer/fmby"
description = "A remake of FMHY/bot"
readme = "README.md"
publish = false

[workspace]
members = [
    "fmby_migrations",
    "fmby_entities",
    "fmby_core",
    "fmby_commands",
    "fmby_events",
]

[dependencies]
fmby_migrations = { path = "fmby_migrations" }
fmby_entities = { path = "fmby_entities" }
fmby_core = { path = "fmby_core" }
fmby_commands = { path = "fmby_commands" }
fmby_events = { path = "fmby_events" }
poise.workspace = true
tokio.workspace = true
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"

[workspace.dependencies]
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
sea-orm = { version = "1.1.14", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
    "with-uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tracing = "0.1.41"
url = "2.5.7"
serde_json = "1.0.143"
rand = "0.9.2"


[patch.'https://github.com/serenity-rs/serenity']
serenity = { git = 'https://github.com/jamesbt365/serenity', branch = 'components-v2-withtag-gradient-nameplates/decor-resolved' }

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
