[package]
name = "fmby_core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
feed-rs = "2.3.1"
fmby_entities = { path = "../fmby_entities" }
poise.workspace = true
pulldown-cmark = { version = "0.13.0", default-features = false }
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
